gcc/testsuite/rust/rustc/ui/issues/issue-14091.rs
fn main(){
    assert!(1,1);
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

